# recursive-intelligence-loop

./: .gitignore  LICENSE  README.md  TODO.md  loop.py  pyproject.toml  run.sh
src/recursive_intelligence_loop/: __init__.py
