[project]
name = "recursive-intelligence-loop"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "david", email = "wizzardx@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recursive_intelligence_loop"]
