[project]
name = "recursive-intelligence-loop"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "david", email = "wizzardx@gmail.com" }
]
dependencies = [
    "openai>=1.63.2",
    "requests>=2.32.3",
    "mypy>=1.15.0",
    "typeguard>=4.4.2",
    "environs>=14.1.1",
    "icecream>=2.1.4",
    "black>=25.1.0",
    "types-requests>=2.32.0.20241016",
    "markdown-it-py>=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recursive_intelligence_loop"]
